--- a/public/index.html
+++ b/public/index.html
@@ -58,30 +58,30 @@
     </section>
 
     <!-- Features Section -->
-    <section class="max-w-7xl mx-auto px-4 py-16">
-        <div class="grid md:grid-cols-3 gap-8">
-            <div class="bg-white rounded-xl p-8 shadow-sm border border-balanz-blue">
-                <div class="w-16 h-16 bg-balanz-green rounded-2xl flex items-center justify-center mx-auto mb-6">
-                    <span class="text-white text-2xl">🔄</span>
+    <section class="max-w-6xl mx-auto px-4 py-12">
+        <div class="grid md:grid-cols-3 gap-6">
+            <div class="bg-white rounded-xl p-6 shadow-sm border border-balanz-blue">
+                <div class="w-12 h-12 bg-balanz-green rounded-xl flex items-center justify-center mx-auto mb-4">
+                    <span class="text-white text-lg">🔄</span>
                 </div>
-                <h3 class="text-xl font-bold text-gray-800 mb-3 text-center">Smart Matching</h3>
-                <p class="text-gray-600 text-center">Madforslag der integrerer tilbuddene</p>
+                <h3 class="text-lg font-bold text-gray-800 mb-2 text-center">Smart Matching</h3>
+                <p class="text-gray-600 text-center text-sm">Madforslag der integrerer tilbuddene</p>
             </div>
 
-            <div class="bg-white rounded-xl p-8 shadow-sm border border-balanz-blue">
-                <div class="w-16 h-16 bg-balanz-green rounded-2xl flex items-center justify-center mx-auto mb-6">
-                    <span class="text-white text-2xl">💰</span>
+            <div class="bg-white rounded-xl p-6 shadow-sm border border-balanz-blue">
+                <div class="w-12 h-12 bg-balanz-green rounded-xl flex items-center justify-center mx-auto mb-4">
+                    <span class="text-white text-lg">💰</span>
                 </div>
-                <h3 class="text-xl font-bold text-gray-800 mb-3 text-center">Budget Tilpasning</h3>
-                <p class="text-gray-600 text-center">Dine ønsker møder din økonomi</p>
+                <h3 class="text-lg font-bold text-gray-800 mb-2 text-center">Budget Tilpasning</h3>
+                <p class="text-gray-600 text-center text-sm">Dine ønsker møder din økonomi</p>
             </div>
 
-            <div class="bg-white rounded-xl p-8 shadow-sm border border-balanz-blue">
-                <div class="w-16 h-16 bg-balanz-green rounded-2xl flex items-center justify-center mx-auto mb-6">
-                    <span class="text-white text-2xl">📋</span>
+            <div class="bg-white rounded-xl p-6 shadow-sm border border-balanz-blue">
+                <div class="w-12 h-12 bg-balanz-green rounded-xl flex items-center justify-center mx-auto mb-4">
+                    <span class="text-white text-lg">📋</span>
                 </div>
-                <h3 class="text-xl font-bold text-gray-800 mb-3 text-center">Over 100 opskrifter</h3>
-                <p class="text-gray-600 text-center">Friske madidéer hver uge</p>
+                <h3 class="text-lg font-bold text-gray-800 mb-2 text-center">Over 100 opskrifter</h3>
+                <p class="text-gray-600 text-center text-sm">Friske madidéer hver uge</p>
             </div>
         </div>
     </section>
