--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                 </p>
                 
                 <p class="text-lg text-gray-500 mb-8 max-w-lg">
-                    Drevet af KI — Hjælper dig at spare penge hver gang du handler.
+                    Hjælper dig at spare penge hver gang du handler.
                 </p>
 
                 <a href="/planner.html" class="inline-block bg-balanz-green text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-opacity-90 transition-all duration-200 shadow-lg">
@@ -58,7 +58,10 @@
     </section>
 
     <!-- Features Section -->
-    <section class="max-w-6xl mx-auto px-4 py-12">
+    <section class="max-w-5xl mx-auto px-4 py-12">
+        <div class="text-center mb-8">
+            <h2 class="text-2xl font-semibold text-gray-800">Intelligent planlægning — Få din indkøbsliste sorteret og klar til brug</h2>
+        </div>
         <div class="grid md:grid-cols-3 gap-6">
             <div class="bg-white rounded-xl p-6 shadow-sm border border-balanz-blue">
                 <div class="w-12 h-12 bg-balanz-green rounded-xl flex items-center justify-center mx-auto mb-4">
@@ -81,7 +84,7 @@
                     <span class="text-white text-lg">📋</span>
                 </div>
                 <h3 class="text-lg font-bold text-gray-800 mb-2 text-center">Over 100 opskrifter</h3>
-                <p class="text-gray-600 text-center text-sm">Friske madidéer hver uge</p>
+                <p class="text-gray-600 text-center text-sm">Friske madidéer hver uge til hverdag</p>
             </div>
         </div>
     </section>
