--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,17 @@
                 <p class="text-lg text-gray-500 mb-8 max-w-lg">
                     Hjælper dig at spare penge hver gang du handler.
                 </p>
-
-                <a href="/planner.html" class="inline-block bg-balanz-green text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-opacity-90 transition-all duration-200 shadow-lg">
-                    Prøv Balanz gratis
-                </a>
+<div class="text-center lg:text-left">
+    <a href="/planner.html" class="inline-block bg-balanz-green text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-opacity-90 transition-all duration-200 shadow-lg">
+        Prøv Balanz.dk madplanner gratis
+    </a>
+    <div class="mt-4">
+        <a href="/email-gate.html" class="inline-block bg-white text-balanz-green border-2 border-balanz-green px-8 py-3 rounded-full text-base font-medium hover:bg-balanz-green hover:text-white transition-all duration-200">
+            Se alle tilbud sorteret
+        </a>
+    </div>
+</div>
+               
             </div>
         </div>
     </section>
