--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <div class="grid lg:grid-cols-2 gap-12 items-center">
             <!-- Hero Image -->
             <div class="order-2 lg:order-1">
-                <img src="/images/hero.png" alt="Smart shopping with Balanz" class="aspect-square max-w-md mx-auto rounded-3xl shadow-lg">
+                <img src="/images/hero.png" alt="Smart shopping with Balanz" class="w-full max-w-md mx-auto rounded-3xl shadow-lg">
             </div>
             
             <!-- Hero Text -->
@@ -54,7 +54,7 @@
         Prøv Balanz.dk madplanner gratis
     </a>
     <div class="mt-4">
-        <a href="/email-gate.html" class="inline-block bg-white text-balanz-green border-2 border-balanz-green px-8 py-3 rounded-full text-base font-medium hover:bg-balanz-green hover:text-white transition-all duration-200">
+        <a href="/deals.html" class="inline-block bg-white text-balanz-green border-2 border-balanz-green px-8 py-3 rounded-full text-base font-medium hover:bg-balanz-green hover:text-white transition-all duration-200">
             Se alle tilbud sorteret
         </a>
     </div>
