--- a/public/planner.html
+++ b/public/planner.html
@@ -321,7 +321,7 @@
                                         <h3 class="text-xl font-bold text-gray-800">Dag ${meal.day}: ${meal.recipe}</h3>
                                         <div class="flex items-center space-x-4 mt-1 text-sm text-gray-600">
                                             <span>👥 ${meal.servings} pers</span>
-                                            <span>💰 ${meal.cost} kr</span>
+                                            <span>💰 ${Math.round(meal.cost)} kr</span>
                                             <span>🎯 ${meal.dealMatches} tilbud</span>
                                         </div>
                                     </div>
