--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                     Hjælper dig at spare penge hver gang du handler.
                 </p>
 <div class="text-center lg:text-left">
-    <a href="/planner.html" class="inline-block bg-balanz-green text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-opacity-90 transition-all duration-200 shadow-lg">
+    <a href="/pre-planner-bridge.html" class="inline-block bg-balanz-green text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-opacity-90 transition-all duration-200 shadow-lg">
         Prøv Balanz.dk madplanner gratis
     </a>
     <div class="mt-4">
