--- a/public/planner.html
+++ b/public/planner.html
@@ -344,7 +344,7 @@
 
                                 ${meal.stealthUpgrade ? `
                                     <div class="mt-4 p-3 bg-green-50 rounded-lg">
-                                        <h5 class="font-semibold text-green-800 text-sm mb-1">🥬 Skjult sundhedsboost:</h5>
+                                        <h5 class="font-semibold text-green-800 text-sm mb-1">💡 Smart lille trick:</h5>
                                         <p class="text-green-700 text-sm">${meal.stealthUpgrade}</p>
                                     </div>
                                 ` : ''}
