--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balanz.dk - Den smartere måde at handle ind</title>
+    <title>SmartBalanz.dk - Den smartere måde at handle ind</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -51,7 +51,7 @@
                 </p>
 <div class="text-center lg:text-left">
     <a href="/pre-planner-bridge.html" class="inline-block bg-balanz-green text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-opacity-90 transition-all duration-200 shadow-lg">
-        Prøv Balanz.dk madplanner gratis
+        Prøv vores madplanner gratis
     </a>
     <div class="mt-4">
         <a href="/deals.html" class="inline-block bg-white text-balanz-green border-2 border-balanz-green px-8 py-3 rounded-full text-base font-medium hover:bg-balanz-green hover:text-white transition-all duration-200">
@@ -100,7 +100,7 @@
     <footer class="bg-gray-800 text-white py-12">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="mb-4">
-                © 2025 Balanz.dk - Den smartere måde at handle ind
+                © 2025 SmartBalanz.dk - Den smartere måde at handle ind
             </div>
             <div class="mb-4">
                 <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors mx-4">Privatlivspolitik</a>
