--- a/public/print-deals-list.html
+++ b/public/print-deals-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balanz.dk - Aktuelle Tilbud</title>
+    <title>SmartBalanz.dk - Aktuelle Tilbud</title>
     <style>
         @media print {
     .print-button { display: none; }
@@ -213,8 +213,8 @@
 
     <div class="footer">
         <img src="/images/header-logo.png" alt="Balanz.dk" class="footer-logo">
-        <p>© 2025 Balanz.dk - Den smartere måde at handle ind</p>
-        <p>Se alle aktuelle tilbud samlet ét sted • www.balanz.dk</p>
+        <p>© 2025 SmartBalanz.dk - Den smartere måde at handle ind</p>
+        <p>Se alle aktuelle tilbud samlet ét sted • www.smartbalanz.dk</p>
         <p>Lavet med ❤️ i Danmark</p>
     </div>
 
