--- a/public/print-shopping-list.html
+++ b/public/print-shopping-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balanz.dk - Indkøbsliste</title>
+    <title>SmartBalanz.dk - Indkøbsliste</title>
     <style>
         @media print {
     .print-button { display: none; }
@@ -189,7 +189,7 @@
     <div class="header">
         <img src="/images/header-logo.png" alt="Balanz.dk Logo" class="logo">
         <div class="header-text">
-            <h1>Balanz.dk Indkøbsliste</h1>
+            <h1>SmartBalanz.dk Indkøbsliste</h1>
             <p id="generated-date">Genereret: [DATE]</p>
         </div>
     </div>
@@ -208,8 +208,8 @@
 
     <div class="footer">
         <img src="/images/header-logo.png" alt="Balanz.dk" class="footer-logo">
-        <p>© 2025 Balanz.dk - Den smartere måde at handle ind</p>
-        <p>Genereret af AI-drevet madplanlægning • www.balanz.dk</p>
+        <p>© 2025 SmartBalanz.dk - Den smartere måde at handle ind</p>
+        <p>Genereret af AI-drevet madplanlægning • www.smartbalanz.dk</p>
         <p>Lavet med ❤️ i Danmark</p>
     </div>
 
