--- a/public/deals.html
+++ b/public/deals.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alle Tilbud - Balanz.dk</title>
+    <title>Alle Tilbud - SmartBalanz.dk</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -111,7 +111,7 @@
     <footer class="bg-gray-800 text-white py-8 sm:py-12 mt-8">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="mb-4 text-sm sm:text-base">
-                © 2025 Balanz.dk - Den smartere måde at handle ind
+                © 2025 SmartBalanz.dk - Den smartere måde at handle ind
             </div>
             <div class="mb-4 flex flex-col sm:flex-row justify-center items-center gap-2 sm:gap-0">
                 <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Privatlivspolitik</a>
