--- a/public/planner.html
+++ b/public/planner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balanz.dk - Smart Madplanlægger</title>
+    <title>SmartBalanz.dk - Den klogere Madplanlægger</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -145,7 +145,7 @@
     <footer class="bg-gray-800 text-white py-12 mt-16">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="mb-4">
-                © 2025 Balanz.dk - Den smartere måde at handle ind
+                © 2025 SmartBalanz.dk - Den smartere måde at handle ind
             </div>
             <div class="mb-4">
                 <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors mx-4">Privatlivspolitik</a>
