--- a/public/deals.html
+++ b/public/deals.html
@@ -114,7 +114,7 @@
                 © 2025 SmartBalanz.dk - Den smartere måde at handle ind
             </div>
             <div class="mb-4 flex flex-col sm:flex-row justify-center items-center gap-2 sm:gap-0">
-                <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Privatlivspolitik</a>
+                <a href="/privacy.html" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Privatlivspolitik</a>
                 <span class="hidden sm:inline text-gray-500">|</span>
                 <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Vilkår og betingelser</a>
                 <span class="hidden sm:inline text-gray-500">|</span>
