--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
                 © 2025 SmartBalanz.dk - Den smartere måde at handle ind
             </div>
             <div class="mb-4">
-                <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors mx-4">Privatlivspolitik</a>
+                <a href="/privacy.html" class="text-gray-300 hover:text-balanz-green transition-colors mx-4">Privatlivspolitik</a>
                 <span class="text-gray-500">|</span>
                 <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors mx-4">Vilkår og betingelser</a>
                 <span class="text-gray-500">|</span>
