--- a/public/index.html
+++ b/public/index.html
@@ -114,5 +114,7 @@
             </div>
         </div>
     </footer>
+	<!-- Add before closing </body> tag -->
+<script src="/js/cookie-consent.js"></script>
 </body>
 </html>
