--- a/public/index.html
+++ b/public/index.html
@@ -116,5 +116,22 @@
     </footer>
 	<!-- Add before closing </body> tag -->
 <script src="/js/cookie-consent.js"></script>
+<!-- Default Statcounter code for SmartBalanzDK
+https://balanz-dk.vercel.app/ -->
+<script type="text/javascript">
+var sc_project=13169788; 
+var sc_invisible=1; 
+var sc_security="053d0dd1"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13169788/0/053d0dd1/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
