--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,14 @@
 <body class="font-sans bg-balanz-beige">
     <!-- Navigation -->
     <nav class="shadow-sm bg-balanz-beige">
-        <div class="max-w-7xl mx-auto px-4 py-4">
-            <img src="/images/header-logo.png" alt="Balanz.dk" class="h-10 w-auto mx-auto">
-        </div>
-    </nav>
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+        <img src="/images/header-logo.png" alt="Balanz.dk" class="h-10 w-auto">
+        <a href="/deals-de.html" class="bg-balanz-green text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-opacity-90 transition-all flex items-center gap-2">
+    <img src="/images/flag-de.png" alt="DE" class="w-4 h-3">
+    <span>Deutsch</span>
+</a>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section class="max-w-7xl mx-auto px-4 py-16">
