--- a/public/deals-de.html
+++ b/public/deals-de.html
@@ -116,9 +116,9 @@
                 © 2025 SmartBalanz.dk - Die clevere Art einzukaufen
             </div>
             <div class="mb-4 flex flex-col sm:flex-row justify-center items-center gap-2 sm:gap-0">
-                <a href="/privacy.html" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Datenschutz</a>
-                <span class="hidden sm:inline text-gray-500">|</span>
-                <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">AGB</a>
+                <a href="/privacy-de.html" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Datenschutz</a>
+<span class="hidden sm:inline text-gray-500">|</span>
+<a href="/privacy-de.html" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Nutzungsbedingungen</a>
                 <span class="hidden sm:inline text-gray-500">|</span>
                 <a href="#" class="text-gray-300 hover:text-balanz-green transition-colors text-sm sm:mx-4">Kontakt</a>
             </div>
