--- a/public/deals-de.html
+++ b/public/deals-de.html
@@ -53,9 +53,18 @@
                 <p class="text-lg sm:text-xl text-gray-600 mb-4 max-w-lg mx-auto lg:mx-0">
                     Die clevere Art im Urlaub einzukaufen
                 </p>
-
-                <p class="text-base text-gray-500 mb-6 sm:mb-8 max-w-lg mx-auto lg:mx-0">
-                    Sie sind im Dänemark-Urlaub? Wir zeigen Ihnen alle Wochenangebote der großen Supermarktketten – damit Sie clever einkaufen und mehr vom Urlaub haben.
+				<p class="text-base text-gray-500 mb-6 sm:mb-8 max-w-lg mx-auto lg:mx-0">
+Sie sind im Dänemark-Urlaub? Wir zeigen Ihnen alle Wochenangebote der 6 großen Supermarktketten – damit Sie clever einkaufen und mehr vom Urlaub haben.</p>
+                
+<p class="text-lg sm:text-xl text-gray-600 mb-4 max-w-lg mx-auto lg:mx-0">
+                    Gültigkeitsdatum</p>                   
+				   
+					<p Lidl - 16.-22. Nov.<br>
+					Coop - 14.-20. Nov.<br>
+					REMA 1000 - 16. -22. Nov.<br>
+					365 Discount - 13.-19. Nov<br>
+					Føtex - 14.-27. Nov.<br>
+					Netto - 15.-21. Nov.
                 </p>
             </div>
         </div>
