--- a/public/deals-de.html
+++ b/public/deals-de.html
@@ -334,5 +334,22 @@ Sie sind im Dänemark-Urlaub? Wir zeigen Ihnen alle Wochenangebote der 6 großen
             window.open('/print-deals-list.html?autoprint=true', '_blank', 'width=800,height=600');
         }
     </script>
+	<!-- Default Statcounter code for SmartBalanz-Deutsch
+https://www.smartbalanz.dk/deals-de.html -->
+<script type="text/javascript">
+var sc_project=13183215; 
+var sc_invisible=1; 
+var sc_security="64f177a5"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13183215/0/64f177a5/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
